// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchResult should render Error 1`] = `
<Box>
  Error...
</Box>
`;

exports[`SearchResult should render Loading 1`] = `
<Box>
  Loading...
</Box>
`;

exports[`SearchResult should render products 1`] = `
<ProductList
  products={
    Array [
      Object {
        "id": "__ID__",
        "imageUrl": "__IMAGE_URL__",
        "price": "100",
        "shop": "__SHOP__",
        "title": "__TITLE__",
      },
    ]
  }
/>
`;
